--- a/osa3/hello-robot/log.html
+++ b/osa3/hello-robot/log.html
@@ -1806,25 +1806,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,168],[[4,5,6,0,[],[1,144,23],[],[[7,0,0,[],[1,157,2],[[0,8,9,0,0,10,0,0,[1,158,0],[]],[0,4,9,0,0,0,0,0,[1,158,1],[]],[0,8,9,0,0,11,0,0,[1,159,0],[]]]],[12,0,0,[],[1,160,3],[[0,8,9,0,0,10,0,0,[1,161,0],[]],[0,4,9,0,0,0,0,0,[1,161,0],[]],[0,4,9,0,0,0,0,0,[1,162,0],[]],[0,4,9,0,0,0,0,0,[1,162,0],[]],[0,8,9,0,0,13,0,0,[1,163,0],[]]]],[14,0,0,[],[1,164,2],[[0,8,9,0,0,10,0,0,[1,165,0],[]],[0,15,9,0,0,16,0,0,[1,165,1],[]],[0,8,9,0,0,16,0,0,[1,166,0],[]]]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,48],[[4,5,6,0,[],[1,22,20],[],[[7,0,0,[],[1,38,1],[[0,8,9,0,0,10,0,0,[1,38,0],[]],[0,4,9,0,0,0,0,0,[1,38,0],[]],[0,8,9,0,0,11,0,0,[1,39,0],[]]]],[12,0,0,[],[1,39,1],[[0,8,9,0,0,10,0,0,[1,39,0],[]],[0,4,9,0,0,0,0,0,[1,40,0],[]],[0,4,9,0,0,0,0,0,[1,40,0],[]],[0,4,9,0,0,0,0,0,[1,40,0],[]],[0,8,9,0,0,13,0,0,[1,40,0],[]]]],[14,0,0,[],[1,41,0],[[0,8,9,0,0,10,0,0,[1,41,0],[]],[0,15,9,0,0,16,0,0,[1,41,0],[]],[0,8,9,0,0,16,0,0,[1,41,0],[]]]]],[],[3,3,0,0]],[17,18,19,0,[],[1,42,5],[],[[20,0,0,[],[1,44,1],[[0,8,9,0,0,10,0,0,[1,44,0],[]],[0,4,9,0,0,0,0,0,[1,44,0],[]],[0,8,9,0,0,11,0,0,[1,45,0],[]],[0,17,9,0,0,0,0,0,[1,45,0],[]],[0,8,9,0,0,10,0,0,[1,45,0],[]]]],[21,0,0,[],[1,46,1],[[0,8,9,0,0,10,0,0,[1,46,0],[]],[0,15,9,0,0,16,0,0,[1,46,0],[]],[0,8,9,0,0,16,0,0,[1,46,0],[]],[0,17,9,0,0,0,0,0,[1,46,0],[]],[0,8,9,0,0,10,0,0,[1,46,1],[]]]]],[],[2,2,0,0]]],[],[],[5,5,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Programming - JYU\\palautusrepo\\osa3\\hello-robot\\src\\tests","*src/tests","*Increase Counter","*C:\\Programming - JYU\\palautusrepo\\osa3\\hello-robot\\src\\tests\\increase_counter.robot","*src/tests/increase_counter.robot","*Increase Counter Once","*Counter Value Should Be","*CounterLibrary","*0","*1","*Increase Counter Many Times","*3","*Increment Counter By Amount","*Increment Counter By","*5"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Programming - JYU\\palautusrepo\\osa3\\hello-robot\\src\\tests","*src/tests","*Increase Counter","*C:\\Programming - JYU\\palautusrepo\\osa3\\hello-robot\\src\\tests\\increase_counter.robot","*src/tests/increase_counter.robot","*Increase Counter Once","*Counter Value Should Be","*CounterLibrary","*0","*1","*Increase Counter Many Times","*3","*Increment Counter By Amount","*Increment Counter By","*5","*Reset Counter","*C:\\Programming - JYU\\palautusrepo\\osa3\\hello-robot\\src\\tests\\reset_counter.robot","*src/tests/reset_counter.robot","*Reset Counter After One Increment","*Reset Counter After Several Increments"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Increase Counter","name":"Increase Counter","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":5,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":5,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Increase Counter","name":"Increase Counter","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"Tests.Reset Counter","name":"Reset Counter","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763337368964;
+window.output["baseMillis"] = 1763381867450;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 194;
+window.output["generated"] = 60;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
