--- a/osa3/login-robot/log.html
+++ b/osa3/login-robot/log.html
@@ -1806,25 +1806,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,251],[[4,5,6,0,[],[1,218,32],[],[[7,0,0,[],[1,245,4],[[1,8,0,0,0,0,0,0,[1,246,1],[[0,9,10,0,0,11,0,0,[1,246,0],[]],[0,12,13,0,0,0,0,0,[1,246,1],[[0,14,10,0,0,15,0,0,[1,247,0],[]]]]]],[0,16,13,0,0,11,0,0,[1,247,1],[[0,14,10,0,0,17,0,0,[1,247,1],[]],[0,14,10,0,0,18,0,0,[1,248,0],[]],[0,19,10,0,0,0,0,0,[1,248,0],[]]]],[0,20,10,0,0,21,0,0,[1,248,0],[]]]]],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,38],[[4,5,6,0,[],[1,22,16],[],[[7,0,0,[],[1,31,2],[[1,8,0,0,0,0,0,0,[1,31,1],[[0,9,10,0,0,11,0,0,[1,32,0],[]],[0,12,13,0,0,0,0,0,[1,32,0],[[0,14,10,0,0,15,0,0,[1,32,0],[]]]]]],[0,16,13,0,0,11,0,0,[1,32,1],[[0,14,10,0,0,17,0,0,[1,32,1],[]],[0,14,10,0,0,18,0,0,[1,33,0],[]],[0,19,10,0,0,0,0,0,[1,33,0],[]]]],[0,20,10,0,0,21,0,0,[1,33,0],[]]]],[22,0,0,[],[1,34,1],[[1,8,0,0,0,0,0,0,[1,34,0],[[0,9,10,0,0,11,0,0,[1,34,0],[]],[0,12,13,0,0,0,0,0,[1,34,0],[[0,14,10,0,0,15,0,0,[1,34,0],[]]]]]],[0,16,13,0,0,23,0,0,[1,35,0],[[0,14,10,0,0,17,0,0,[1,35,0],[]],[0,14,10,0,0,18,0,0,[1,35,0],[]],[0,19,10,0,0,0,0,0,[1,35,0],[]]]],[0,20,10,0,0,24,0,0,[1,35,0],[]]]],[25,0,0,[],[1,36,1],[[1,8,0,0,0,0,0,0,[1,36,0],[[0,9,10,0,0,11,0,0,[1,36,0],[]],[0,12,13,0,0,0,0,0,[1,36,0],[[0,14,10,0,0,15,0,0,[1,36,0],[]]]]]],[0,16,13,0,0,26,0,0,[1,36,1],[[0,14,10,0,0,17,0,0,[1,37,0],[]],[0,14,10,0,0,18,0,0,[1,37,0],[]],[0,19,10,0,0,0,0,0,[1,37,0],[]]]],[0,20,10,0,0,24,0,0,[1,37,0],[]]]]],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Programming - JYU\\palautusrepo\\osa3\\login-robot\\src\\tests","*src/tests","*Login","*C:\\Programming - JYU\\palautusrepo\\osa3\\login-robot\\src\\tests\\login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Create User And Input Login Command","*Create User","*AppLibrary","*kalle, kalle123","*Input Login Command","*resource","*Input","*login","*Input Credentials","*${username}","*${password}","*Run Application","*Output Should Contain","*Logged in"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tests","*C:\\Programming - JYU\\palautusrepo\\osa3\\login-robot\\src\\tests","*src/tests","*Login","*C:\\Programming - JYU\\palautusrepo\\osa3\\login-robot\\src\\tests\\login.robot","*src/tests/login.robot","*Login With Correct Credentials","*Create User And Input Login Command","*Create User","*AppLibrary","*kalle, kalle123","*Input Login Command","*resource","*Input","*login","*Input Credentials","*${username}","*${password}","*Run Application","*Output Should Contain","*Logged in","*Login With Incorrect Password","*kalle, mikko123","*Invalid username or password","*Login With Nonexistent Username","*mikko, mikko123"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Tests","name":"Tests","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Tests.Login","name":"Login","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763337153536;
+window.output["baseMillis"] = 1763382615729;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 274;
+window.output["generated"] = 50;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
